--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,3 +3,6 @@ pydantic>=1.8.0,<2.0.0
 uvicorn>=0.15.0,<0.16.0
 SQLAlchemy==1.4.44
 psycopg2==2.9.5
+python-jose[cryptography]
+passlib[bcrypt]
+python-multipart
