--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,6 +9,7 @@ COPY ./requirements.txt /code/requirements.txt
 
 # 
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+RUN python -m pip install requests
 
 # 
 COPY ./ /code/app
