--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,9 @@ services:
           "pg_isready",
           "-q",
           "-d",
+          "${POSTGRES_DB}",
           "-U",
+          "${POSTGRES_USER}"
         ]
       timeout: 45s
       interval: 10s
