trying command to shut down logs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - POSTGRES_PASSWORD=fastapi
     env_file:
       - ./db/.env
+    command: "-c logging_collector=off"
     networks:
       - fastapiXdocker
     healthcheck:
